tests/snapshots/tests__arg__requires_ifs-2.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_e4199b0b'
[1m[31merror:[0m the following required arguments were not provided:
  [32m--option <opt>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--option[0m <opt> [1m--config[0m <config> [other]

For more information, try '[1m--help[0m'.
EOF_e4199b0b
exit 1
